feat: Introduce Android call monitor application, implement labour availability management, and refactor entities with a new BaseEntity.